<resources>
    <string name="app_name">Pr2.FEM.JoseLorenzo</string>
    <string name="user_profile">Información del usuario</string>

    <string name="signed_in">Signed in!</string>
    <string name="signed_out">Signed out!</string>
    <string name="user_name_text"></string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="logout_button">Logout</string>

    <!-- Guardar entrega -->
    <string name="producto_text">Ref. producto</string>
    <string name="producto_edit_text">Inserte producto</string>
    <string name="producto_empty_text">Error: Inserte un producto</string>
    <string name="incidencias_text">Incidencias</string>
    <string name="incidencias_edit_text">Inserte incidencias</string>
    <string name="post_reparto_button">Guardar</string>
    <string name="post_reparto_text">Se ha registrado el reparto</string>

    <!-- Lista de reparto -->
    <string name="get_reparto_button">Repartos pendientes</string>
    <string name="get_reparto_text">Lista de repartos pendientes</string>

    <!-- Info usuario logado -->
    <string name="logged_user_info_text">Informacion del usuario logado</string>
    <string name="user_name_label">Usuario</string>
    <string name="user_email_label">Email</string>
    <string name="user_email_text"></string>
    <string name="user_phone_label">Telefono</string>
    <string name="user_phone_text"></string>
    <string name="user_company_label">Compañía</string>
    <string name="user_company_text"></string>
    <string name="user_address_label">Dirección</string>
    <string name="user_street_text"></string>
    <string name="user_suite_text"></string>
    <string name="user_city_text"></string>
    <string name="user_zipcode_text"></string>
    <string name="strError">No se ha recuperado ningún usuario</string>
</resources>
